# peter_example

./: CMakeLists.txt  README.md
include/: PeterProcessor.hpp  TOFInfo.hpp
src/: PeterProcessor.cpp  TOFInfo.cpp
xml/: steer.xml
